# SimpleSTL

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  Vector.h  codecov.yml
tests/: CMakeLists.txt  tests-vector.cpp
vector/: CMakeLists.txt  README.md  vector.h
vector/test/: tests-main.cpp
